--- a/package.json
+++ b/package.json
@@ -9,12 +9,12 @@
     "lint": "eslint"
   },
   "dependencies": {
+    "@svgr/webpack": "^8.1.0",
     "classnames": "^2.5.1",
     "gh-pages": "^6.3.0",
     "next": "15.5.6",
     "react": "19.1.0",
-    "react-dom": "19.1.0",
-    "sass": "^1.93.2"
+    "react-dom": "19.1.0"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
@@ -23,7 +23,8 @@
     "@types/react": "^19",
     "@types/react-dom": "^19",
     "eslint": "^9",
-    "eslint-config-next": "15.5.6",
+    "eslint-config-next": "^15.5.6",
+    "eslint-plugin-import": "^2.32.0",
     "tailwindcss": "^4",
     "typescript": "^5"
   }
