--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@svgr/webpack": "^8.1.0",
     "classnames": "^2.5.1",
+    "embla-carousel": "^8.6.0",
     "gh-pages": "^6.3.0",
     "next": "15.5.6",
     "react": "19.1.0",
