--- a/package.json
+++ b/package.json
@@ -11,11 +11,11 @@
   "dependencies": {
     "@svgr/webpack": "^8.1.0",
     "classnames": "^2.5.1",
-    "embla-carousel-react": "^8.6.0",
     "gh-pages": "^6.3.0",
     "next": "15.5.6",
     "react": "19.1.0",
-    "react-dom": "19.1.0"
+    "react-dom": "19.1.0",
+    "swiper": "^12.0.3"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
