--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@svgr/webpack": "^8.1.0",
+    "@vis.gl/react-google-maps": "^1.6.1",
     "classnames": "^2.5.1",
     "gh-pages": "^6.3.0",
     "next": "15.5.6",
