--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
     "dev": "next dev --turbopack",
     "build": "next build --turbopack",
     "start": "next start",
-    "lint": "eslint"
+    "lint": "eslint app",
+    "prepare": "husky"
   },
   "dependencies": {
     "@svgr/webpack": "^8.1.0",
@@ -27,6 +28,7 @@
     "eslint": "^9",
     "eslint-config-next": "^15.5.6",
     "eslint-plugin-import": "^2.32.0",
+    "husky": "^9.1.7",
     "tailwindcss": "^4",
     "typescript": "^5"
   }
