--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
     "dev": "next dev --turbopack",
     "build": "next build --turbopack",
     "start": "next start",
-    "lint": "eslint app",
+    "lint": "eslint app src",
     "prepare": "husky"
   },
   "dependencies": {
@@ -17,6 +17,7 @@
     "next": "15.5.6",
     "react": "19.1.0",
     "react-dom": "19.1.0",
+    "react-hook-form": "^7.66.0",
     "swiper": "^12.0.3"
   },
   "devDependencies": {
