--- a/package.json
+++ b/package.json
@@ -2,16 +2,22 @@
   "name": "rivnovaga",
   "version": "0.1.0",
   "private": true,
+  "type": "module",
   "scripts": {
     "dev": "next dev --turbopack",
     "build": "next build --turbopack",
     "start": "next start",
     "lint": "eslint app src",
-    "prepare": "husky"
+    "prepare": "husky",
+    "prisma:seed": "node --loader ts-node/esm prisma/seed.ts",
+    "prisma:push": "prisma db push",
+    "prisma:studio": "prisma studio"
   },
   "dependencies": {
+    "@prisma/client": "^6.19.0",
     "@svgr/webpack": "^8.1.0",
     "@vis.gl/react-google-maps": "^1.6.1",
+    "axios": "^1.13.2",
     "classnames": "^2.5.1",
     "next": "15.5.6",
     "react": "19.1.0",
@@ -28,7 +34,9 @@
     "eslint-config-next": "^15.5.6",
     "eslint-plugin-import": "^2.32.0",
     "husky": "^9.1.7",
+    "prisma": "^6.19.0",
     "tailwindcss": "^4",
+    "ts-node": "^10.9.2",
     "typescript": "^5"
   }
 }
