--- a/tsconfig.json
+++ b/tsconfig.json
@@ -23,6 +23,7 @@
       "@pages/*": ["./src/pages/*"],
       "@widgets/*": ["./src/widgets/*"],
       "@features/*": ["./src/features/*"],
+      "@entity/*": ["./src/entity/*"],
       "@shared/*": ["./src/shared/*"],
     }
   },
