--- a/package.json
+++ b/package.json
@@ -23,7 +23,7 @@
     "react": "19.1.0",
     "react-dom": "19.1.0",
     "react-hook-form": "^7.66.0",
-    "react-input-mask": "^2.0.4",
+    "react-imask": "^7.6.1",
     "react-select": "^5.10.2"
   },
   "devDependencies": {
