--- a/package.json
+++ b/package.json
@@ -27,7 +27,9 @@
     "react-dom": "19.1.0",
     "react-hook-form": "^7.66.0",
     "react-imask": "^7.6.1",
+    "react-loader-spinner": "^8.0.0",
     "react-select": "^5.10.2",
+    "react-toastify": "^11.0.5",
     "zod": "^4.1.12"
   },
   "devDependencies": {
