--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@vis.gl/react-google-maps": "^1.6.1",
     "axios": "^1.13.2",
     "classnames": "^2.5.1",
+    "mime-types": "^3.0.2",
     "next": "15.5.6",
     "react": "19.1.0",
     "react-dom": "19.1.0",
@@ -35,6 +36,7 @@
   "devDependencies": {
     "@eslint/eslintrc": "^3",
     "@tailwindcss/postcss": "^4",
+    "@types/mime-types": "^3.0.1",
     "@types/node": "^20",
     "@types/react": "^19",
     "@types/react-dom": "^19",
