--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@vis.gl/react-google-maps": "^1.6.1",
     "axios": "^1.13.2",
     "classnames": "^2.5.1",
+    "is-hotkey": "^0.2.0",
     "mime-types": "^3.0.2",
     "next": "15.5.6",
     "react": "19.1.0",
@@ -29,8 +30,10 @@
     "react-hook-form": "^7.66.0",
     "react-imask": "^7.6.1",
     "react-loader-spinner": "^8.0.0",
+    "react-quill-new": "^3.6.0",
     "react-select": "^5.10.2",
     "react-toastify": "^11.0.5",
+    "slate-history": "^0.113.1",
     "zod": "^4.1.12"
   },
   "devDependencies": {
