--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "react-select": "^5.10.2",
     "react-toastify": "^11.0.5",
     "slate-history": "^0.113.1",
+    "slugify": "^1.6.6",
     "zod": "^4.1.12"
   },
   "devDependencies": {
