--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "mime-types": "^3.0.2",
     "next": "15",
     "react": "19.1.0",
+    "react-datepicker": "^9.0.0",
     "react-dom": "19.1.0",
     "react-hook-form": "^7.66.0",
     "react-imask": "^7.6.1",
@@ -35,6 +36,7 @@
     "react-toastify": "^11.0.5",
     "slate-history": "^0.113.1",
     "slugify": "^1.6.6",
+    "uuid": "^13.0.0",
     "zod": "^4.1.12"
   },
   "devDependencies": {
