--- a/tsconfig.json
+++ b/tsconfig.json
@@ -25,6 +25,7 @@
       "@features/*": ["./src/features/*"],
       "@entity/*": ["./src/entities/*"],
       "@shared/*": ["./src/shared/*"],
+      "@app/*": ["./app/*"]
     }
   },
   "include": ["next-env.d.ts", "**/*.ts", "**/*.tsx", ".next/types/**/*.ts"],
