--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "is-hotkey": "^0.2.0",
     "mime-types": "^3.0.2",
     "next": "15",
+    "next-sitemap": "^4.2.3",
     "react": "19.1.0",
     "react-datepicker": "^9.0.0",
     "react-dom": "19.1.0",
