--- a/package.json
+++ b/package.json
@@ -19,11 +19,11 @@
     "@hookform/resolvers": "^5.2.2",
     "@prisma/client": "^6.19.0",
     "@svgr/webpack": "^8.1.0",
-    "@vis.gl/react-google-maps": "^1.6.1",
     "axios": "^1.13.2",
     "bcrypt": "^6.0.0",
     "classnames": "^2.5.1",
     "is-hotkey": "^0.2.0",
+    "leaflet": "^1.9.4",
     "mime-types": "^3.0.2",
     "next": "15",
     "next-sitemap": "^4.2.3",
@@ -32,6 +32,7 @@
     "react-dom": "19.1.0",
     "react-hook-form": "^7.66.0",
     "react-imask": "^7.6.1",
+    "react-leaflet": "^5.0.0",
     "react-loader-spinner": "^8.0.0",
     "react-quill-new": "^3.6.0",
     "react-select": "^5.10.2",
@@ -45,6 +46,7 @@
     "@eslint/eslintrc": "^3",
     "@tailwindcss/postcss": "^4",
     "@types/bcrypt": "^6.0.0",
+    "@types/leaflet": "^1.9.21",
     "@types/mime-types": "^3.0.1",
     "@types/node": "^20",
     "@types/react": "^19",
